# cmakelib-component-cmdef

./: CMDEFConfig.cmake  FindCMDEF.cmake  README.md
example/executable/: CMakeLists.txt  main.c
example/library-interface/: CMakeLists.txt  main.cpp
example/library-interface/include/: test_c.hpp
example/library-interface/include/testlib/: printAllMessages.hpp
example/library-interface/include_second/second/: InterfaceFirst.hpp  InterfaceSecond.hpp
example/library-interface/include_third/third/: InterfaceThird.hpp
example/library-interface/sources/: test_c.cpp
example/library-interface/sources/second/: InterfaceFirst.cpp  InterfaceSecond.cpp
example/library-interface/sources/testlib/: printAllMessages.cpp
example/library-interface/sources/third/: InterfaceThird.cpp
test/: CMakeLists.txt  README.md  TEST.cmake  cache_var.cmake  install_override.cmake
test/CMDEF_ADD_EXECUTABLE/: CMakeLists.txt  README.md
test/CMDEF_ADD_EXECUTABLE/error_test_sources/: invalid_syntax.cpp  missing_include.cpp
test/CMDEF_ADD_EXECUTABLE/shared_sources/: shared_sources.cmake
test/CMDEF_ADD_EXECUTABLE/shared_sources/include/: platform_utils.h  utils.h
test/CMDEF_ADD_EXECUTABLE/shared_sources/resources/: test_resource.rc
test/CMDEF_ADD_EXECUTABLE/shared_sources/src/: main.cpp  platform_utils.cpp  utils.cpp
test/CMDEF_ADD_EXECUTABLE/test_cases/all_parameters/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/check_function/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/custom_output_name/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/debug_suffix_build_type/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/executable_with_includes/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/generator_expression_suffix/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/invalid_target_name_warning/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/invalid_version_error/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/macos_bundle/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/minimal_executable/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/missing_sources_error/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/missing_target_error/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/missing_version_error/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/multiple_sources/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/win32_flag/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/windows_msvc_runtime/: CMakeLists.txt
test/CMDEF_ADD_EXECUTABLE/test_cases/windows_resource_generation/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/: CMakeLists.txt  README.md
test/CMDEF_ADD_LIBRARY/multiple_include_sources/: multiple_include_sources.cmake
test/CMDEF_ADD_LIBRARY/multiple_include_sources/src/: library.cpp  utils.cpp
test/CMDEF_ADD_LIBRARY/shared_sources/: shared_sources.cmake
test/CMDEF_ADD_LIBRARY/shared_sources/include/: library.h  utils.h
test/CMDEF_ADD_LIBRARY/shared_sources/src/: library.cpp  utils.cpp
test/CMDEF_ADD_LIBRARY/test_cases/cache_variables_validation/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/check_function/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/generator_expressions/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/interface_library/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/multiple_include_directories/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/parameter_validation/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/parameter_validation/invalid_type/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/parameter_validation/missing_library_group/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/parameter_validation/missing_sources_non_interface/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/posix_specific/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/soversion/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/target_properties_validation/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/version_validation/: CMakeLists.txt
test/CMDEF_ADD_LIBRARY/test_cases/windows_specific/: CMakeLists.txt
test/CMDEF_ENV/: CMakeLists.txt  README.md
test/CMDEF_ENV/arch_detection/: CMakeLists.txt
test/CMDEF_ENV/basic_init/: CMakeLists.txt
test/CMDEF_ENV/cache_variables_validation/: CMakeLists.txt
test/CMDEF_ENV/macos_specific/: CMakeLists.txt
test/CMDEF_ENV/os_detection/: CMakeLists.txt
test/CMDEF_ENV/windows_specific/: CMakeLists.txt
test/CMDEF_INSTALL/: CMakeLists.txt  README.md  install_test_macros.cmake  library_tests.cmake
test/CMDEF_INSTALL/shared_sources/: shared_sources.cmake
test/CMDEF_INSTALL/shared_sources/include/: library.h
test/CMDEF_INSTALL/shared_sources/src/: library.cpp
test/CMDEF_INSTALL/test_cases/executable/: CMakeLists.txt
test/CMDEF_INSTALL/test_cases/include_dirs/: CMakeLists.txt
test/CMDEF_INSTALL/test_cases/interface_lib/: CMakeLists.txt
test/CMDEF_INSTALL/test_cases/multiple_calls/: CMakeLists.txt
test/CMDEF_INSTALL/test_cases/no_config/: CMakeLists.txt
test/CMDEF_INSTALL/test_cases/shared_lib/: CMakeLists.txt
test/CMDEF_INSTALL/test_cases/static_lib/: CMakeLists.txt
test/CMDEF_INSTALL/test_cases/with_configs/: CMakeLists.txt
test/CMDEF_INSTALL/test_cases/with_namespace/: CMakeLists.txt
test/CMDEF_PACKAGE/: CMakeLists.txt  README.md  package_test_macros.cmake
test/CMDEF_PACKAGE/shared_sources/: custom_cpack_config.cmake  shared_sources.cmake
test/CMDEF_PACKAGE/shared_sources/src/: main.cpp
test/CMDEF_PACKAGE/test_cases/dependency_inclusion/: CMakeLists.txt
test/CMDEF_PACKAGE/test_cases/executable/: CMakeLists.txt
test/CMDEF_PACKAGE/test_cases/interface_lib/: CMakeLists.txt
test/CMDEF_PACKAGE/test_cases/invalid_arguments/: CMakeLists.txt
test/CMDEF_PACKAGE/test_cases/multiconfig_build/: CMakeLists.txt
test/CMDEF_PACKAGE/test_cases/shared_lib/: CMakeLists.txt
test/CMDEF_PACKAGE/test_cases/static_lib/: CMakeLists.txt
test/CMDEF_PACKAGE/test_cases/with_configs/: CMakeLists.txt
test/CMDEF_PACKAGE/test_cases/with_cpack_config/: CMakeLists.txt
(+35 files in other folders)
