
## Main
#
# Test CMDEF_ADD_EXECUTABLE
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
PROJECT(CMDEF_ADD_EXECUTABLE_TEST)

FIND_PACKAGE(CMLIB REQUIRED)

ADD_SUBDIRECTORY(CMDEF_ENV)
ADD_SUBDIRECTORY(CMDEF_ADD_EXECUTABLE)
ADD_SUBDIRECTORY(CMDEF_ADD_LIBRARY)
ADD_SUBDIRECTORY(CMDEF_INSTALL)
ADD_SUBDIRECTORY(CMDEF_PACKAGE)
