## Main
#
# Test basic initialization of CMDEF_ENV
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(CMDEF_ENV_BASIC_INIT_TEST)

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../TEST.cmake")

# Include the module
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../system_modules/CMDEF_ENV.cmake")

TEST_VAR_DEFINED(CMDEF_OS_NAME)
TEST_VAR_DEFINED(CMDEF_OS_NAME_SHORT)
TEST_VAR_DEFINED(CMDEF_OS_NAME_UPPER)
TEST_VAR_DEFINED(CMDEF_ARCHITECTURE)
TEST_VAR_DEFINED(CMDEF_DISTRO_ID)
TEST_VAR_DEFINED(CMDEF_DISTRO_VERSION_ID)

TEST_VAR_DEFINED(CMDEF_OS_MACOS)
TEST_VAR_DEFINED(CMDEF_OS_WINDOWS)
TEST_VAR_DEFINED(CMDEF_OS_LINUX)
TEST_VAR_DEFINED(CMDEF_OS_POSIX)

TEST_VAR_DEFINED(CMDEF_LIBRARY_PREFIX)
TEST_VAR_DEFINED(CMDEF_LIBRARY_NAME_FLAG_STATIC)
TEST_VAR_DEFINED(CMDEF_LIBRARY_NAME_FLAG_SHARED)
TEST_VAR_DEFINED(CMDEF_LIBRARY_NAME_DEBUG_SUFFIX)
TEST_VAR_DEFINED(CMDEF_LIBRARY_NAME_DEV_SUFFIX)
TEST_VAR_DEFINED(CMDEF_EXECUTABLE_NAME_DEBUG_SUFFIX)

TEST_VAR_DEFINED(CMDEF_LIBRARY_NAME_SUFFIX_STATIC)
TEST_VAR_DEFINED(CMDEF_LIBRARY_NAME_SUFFIX_SHARED)

TEST_VAR_DEFINED(CMDEF_ENV_NAME_SEPARATOR)
TEST_VAR_DEFINED(CMDEF_ENV_NAMESPACE_SUFFIX)

TEST_VAR_DEFINED(CMDEF_SUPPORTED_LANG_LIST)
TEST_VAR_DEFINED(CMDEF_LANG_CXX_SOURCE_FILE_EXTENSIONS)
TEST_VAR_DEFINED(CMDEF_LANG_C_SOURCE_FILE_EXTENSIONS)
TEST_VAR_DEFINED(CMDEF_LANG_OBJC_SOURCE_FILE_EXTENSIONS)
TEST_VAR_DEFINED(CMDEF_LANG_OBJCXX_SOURCE_FILE_EXTENSIONS)
TEST_VAR_DEFINED(CMDEF_LANG_RC_SOURCE_FILE_EXTENSIONS)

TEST_VAR_DEFINED(CMDEF_INCLUDE_INSTALL_DIR)
TEST_VAR_DEFINED(CMDEF_SOURCE_INSTALL_DIR)
TEST_VAR_DEFINED(CMDEF_LIBRARY_INSTALL_DIR)
TEST_VAR_DEFINED(CMDEF_BINARY_INSTALL_DIR)

TEST_VAR_DEFINED(CMDEF_ENV_DESCRIPTION_COMPANY_NAME)
TEST_VAR_DEFINED(CMDEF_ENV_DESCRIPTION_COPYRIGHT) 