## Main
#
# Test macOS-specific functionality in CMDEF_ENV
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.18)
PROJECT(CMDEF_ENV_MACOS_TEST)

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../TEST.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../system_modules/CMDEF_ENV.cmake")

IF(CMDEF_OS_MACOS)
	TEST_VAR_DEFINED(CMDEF_MACOS_EXECUTABLE_IBTOOL)

	TEST_VAR_VALUE_EQUAL(CMDEF_LIBRARY_NAME_SUFFIX_STATIC "${CMDEF_LIBRARY_NAME_SUFFIX_STATIC_MACOS}")
	TEST_VAR_VALUE_EQUAL(CMDEF_LIBRARY_NAME_SUFFIX_SHARED "${CMDEF_LIBRARY_NAME_SUFFIX_SHARED_MACOS}")
ELSE()
	MESSAGE(STATUS "Skipping macOS-specific tests - not running on macOS")
ENDIF() 