## Main
#
# Test Windows-specific functionality in CMDEF_ENV
#

CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(CMDEF_ENV_WINDOWS_TEST)

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../TEST.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../system_modules/CMDEF_ENV.cmake")

TEST_VAR_DEFINED(CMDEF_WINDOWS_EXECUTABLE_MT)

TEST_VAR_DEFINED(CMDEF_WINDOWS_STATIC_RUNTIME)
TEST_VAR_TRUE(CMDEF_WINDOWS_STATIC_RUNTIME)

TEST_VAR_VALUE_EQUAL(CMDEF_LIBRARY_NAME_SUFFIX_STATIC "${CMDEF_LIBRARY_NAME_SUFFIX_STATIC_WINDOWS}")
TEST_VAR_VALUE_EQUAL(CMDEF_LIBRARY_NAME_SUFFIX_SHARED "${CMDEF_LIBRARY_NAME_SUFFIX_SHARED_WINDOWS}")